fix: update navbar to always be full bleed by default

--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -8,6 +8,7 @@ $bolt-navbar-title-transition: $bolt-transition;
 
 
 bolt-navbar {
+  @include bolt-full-bleed; // @todo: make full bleed optional?
   display: block;
   overflow: visible;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
