--- a/packages/components/bolt-priority-nav/priority-nav.scss
+++ b/packages/components/bolt-priority-nav/priority-nav.scss
@@ -182,9 +182,9 @@ bolt-priority-nav {
 }
 
 .c-bolt-priority-nav__dropdown {
+  @include bolt-z-index(tooltip);
   box-shadow: 0 1px 2px 1px rgba(6, 10, 36, 0.1);
   min-width: 10em;
-
   display: none;
   position: absolute;
   top: 100%;
